src/objects/ssv4__ProjectLog__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <fields>
        <fullName>ssv4__Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssv4__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ssv4__OrgSrc__c.ssv4__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.ssv4__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ssv4__OrgSrc__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>projectLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssv4__Index__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssv4__ParentLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Log</label>
        <referenceTo>ssv4__ProjectLog__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>ProjectLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssv4__Priority__c</fullName>
        <inlineHelpText>Priority of bug</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__Project__c</fullName>
        <label>Project</label>
        <referenceTo>ssv4__Project__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>ProjectLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ssv4__QA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>pLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssv4__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Need To Estimate</fullName>
                </value>
                <value>
                    <fullName>Need To Approval</fullName>
                </value>
                <value>
                    <fullName>Need to Develop</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready To QA</fullName>
                </value>
                <value>
                    <fullName>Return With Defect</fullName>
                </value>
                <value>
                    <fullName>Ready To Deploy</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>SalesForce BUG</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__appEstimationTxt__c</fullName>
        <inlineHelpText>Approximaly Estimation in minutes(s) for this task. You can use [d|D] - days, [h|H] - hours, [m|M] - minutes</inlineHelpText>
        <label>Approximaly Estimation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__appEstimation__c</fullName>
        <formula>IF(ISBLANK(ssv4__appEstimationTxt__c), 0,
	VALUE(&apos;0&apos;+
		MID(
			SUBSTITUTE(SUBSTITUTE(LOWER(SUBSTITUTE(ssv4__appEstimationTxt__c, &apos; &apos;, &apos;&apos;)), &apos;h&apos;, &apos;+&apos;), &apos;m&apos;, &apos;&apos;),
			0,
			FIND(&apos;+&apos;, SUBSTITUTE(SUBSTITUTE(LOWER(SUBSTITUTE(ssv4__appEstimationTxt__c, &apos; &apos;, &apos;&apos;)), &apos;h&apos;, &apos;+&apos;), &apos;m&apos;, &apos;&apos;)) - 1
		)
	)*60 +
VALUE(&apos;0&apos;+
		MID(
			SUBSTITUTE(SUBSTITUTE(LOWER(SUBSTITUTE(ssv4__appEstimationTxt__c, &apos; &apos;, &apos;&apos;)), &apos;h&apos;, &apos;+&apos;), &apos;m&apos;, &apos;&apos;),
			FIND(&apos;+&apos;, SUBSTITUTE(SUBSTITUTE(LOWER(SUBSTITUTE(ssv4__appEstimationTxt__c, &apos; &apos;, &apos;&apos;)), &apos;h&apos;, &apos;+&apos;), &apos;m&apos;, &apos;&apos;)) + 1,10
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approximaly Estimation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssv4__blockReason__c</fullName>
        <inlineHelpText>Please enter a block reason</inlineHelpText>
        <label>Block Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__clientPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>projectLogsPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssv4__isApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__realTime__c</fullName>
        <label>Real Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssv4__stepToReproduce__c</fullName>
        <inlineHelpText>Please provide information to reproduce this bug (Site URL or record Id)</inlineHelpText>
        <label>Step to reproduce</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__timeStatus__c</fullName>
        <formula>IF(ssv4__realTime__c &gt; ssv4__appEstimation__c,IMAGE(&apos;/img/msg_icons/error24.png&apos;, &apos;&apos; , 16, 16),IMAGE(&apos;/img/msg_icons/confirm24.png&apos;, &apos;&apos; , 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Status</label>
        <type>Text</type>
    </fields>
    <label>Project Log</label>
    <listViews>
        <fullName>ssv4__All</fullName>
        <columns>ssv4__Description__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ssv4__Index__c</columns>
        <columns>ssv4__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ssv4__Status__c</field>
            <operation>equals</operation>
            <value>New,Need To Estimate,Need To Approval,Need to Develop</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ssv4__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Logs</pluralLabel>
    <recordTypes>
        <fullName>ssv4__bug</fullName>
        <active>true</active>
        <description>Bug recordType</description>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>ssv4__changeRequest</fullName>
        <active>true</active>
        <label>Change Request (CR)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ssv4__checkBlockers</fullName>
        <active>true</active>
        <description>Check blocker and blocker Reason</description>
        <errorConditionFormula>( ISPICKVAL( ssv4__Status__c , &apos;Blocked&apos;)  &amp;&amp;  ISBLANK(ssv4__blockReason__c ))</errorConditionFormula>
        <errorDisplayField>ssv4__blockReason__c</errorDisplayField>
        <errorMessage>Please enter a blocker reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ssv4__checkStepToReproduce</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.DeveloperName = &apos;bug&apos; &amp;&amp;  LEN( ssv4__stepToReproduce__c ) &lt; 20</errorConditionFormula>
        <errorDisplayField>ssv4__stepToReproduce__c</errorDisplayField>
        <errorMessage>Please provide step to reproduce information or another information about this bug</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ssv4__checkTimeValue</fullName>
        <active>true</active>
        <description>Allow only chars [0..9mMhH ]</description>
        <errorConditionFormula>NOT(
REGEX(
ssv4__appEstimationTxt__c,
&quot;(?i)([0123456789mh ])+?&quot;
)
) &amp;&amp;  NOT(ISBLANK(ssv4__appEstimationTxt__c))</errorConditionFormula>
        <errorDisplayField>ssv4__appEstimationTxt__c</errorDisplayField>
        <errorMessage>Please enter correct value. Allow only chars [0..9mMhH ]</errorMessage>
    </validationRules>
</CustomObject>